deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  type: ClusterIP
  selector:
    app: accounts
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
